--- a/product/roundhouse.databases.oracle/roundhouse.databases.oracle.csproj
+++ b/product/roundhouse.databases.oracle/roundhouse.databases.oracle.csproj
@@ -94,6 +94,7 @@
     <Compile Include="orm\VersionMapping.cs" />
     <Compile Include="PLSQLSpecific.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoundhousEOracleDriver.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\roundhouse\roundhouse.csproj">
