(GH-120) Pass version number in the command line
  - Add CommandLineVersionResolver.cs which extracts version directly from a
    string.
  - Update VersionResolverBuilder.cs to include the new resolver. Logic
    now groups the file based resolvers together and skips them if the
    command line resolver is valid.
  - Added Version property to the configuration objects.
  - Fix small typo / spelling error (already submitted in Pull Request #134

--- a/product/roundhouse/roundhouse.csproj
+++ b/product/roundhouse/roundhouse.csproj
@@ -135,6 +135,7 @@
     <Compile Include="parameters\AdoNetParameter.cs" />
     <Compile Include="parameters\IParameter.cs" />
     <Compile Include="Migrate.cs" />
+    <Compile Include="resolvers\CommandLineVersionResolver.cs" />
     <Compile Include="resolvers\ScriptfileVersionResolver.cs" />
     <Compile Include="resolvers\TextVersionResolver.cs" />
     <Compile Include="RoundhousEFluentNHibernateDiffingType.cs" />
