--- a/product/roundhouse.databases.sqlite/packages.config
+++ b/product/roundhouse.databases.sqlite/packages.config
@@ -3,5 +3,7 @@
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net35" />
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
-  <package id="System.Data.SQLite" version="1.0.84.0" targetFramework="net35" />
+  <package id="System.Data.SQLite" version="1.0.92.0" targetFramework="net35" />
+  <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net35" />
+  <package id="System.Data.SQLite.Linq" version="1.0.92.0" targetFramework="net35" />
 </packages>
