--- a/product/roundhouse.console/packages.config
+++ b/product/roundhouse.console/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net35" />
   <package id="Iesi.Collections" version="3.3.2.4000" targetFramework="net35" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net35" />
   <package id="log4net" version="2.0.0" targetFramework="net35" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net35" />
   <package id="PublishedApplications" version="2.1.0.0" targetFramework="net35" />
